// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createService Authorization Called for every access with correct contexts 1`] = `
Array [
  "DETAIL",
  "CREATE",
  "UPDATE",
  "DELETE",
  "LIST",
]
`;

exports[`createService Basic handlers Create 1`] = `
Object {
  "id": 5,
}
`;

exports[`createService Basic handlers Create 2`] = `
Object {
  "context": Object {
    "q": "dalmatins",
    "user": "Crudella de Vile",
  },
  "data": Object {
    "id": 5,
  },
  "options": Object {
    "q": "dalmatins",
    "user": "Crudella de Vile",
    "withRelated": Array [
      "dummy",
    ],
  },
  "safe": false,
  "type": "CREATE",
  "write": true,
}
`;

exports[`createService Basic handlers Delete 1`] = `
Object {
  "context": Object {
    "q": "dalmatins",
    "user": "Crudella de Vile",
  },
  "entity": Object {
    "id": 5,
    "name": "john",
  },
  "id": 5,
  "options": Object {
    "q": "dalmatins",
    "user": "Crudella de Vile",
    "withRelated": Array [
      "dummy",
    ],
  },
  "safe": false,
  "type": "DELETE",
  "write": false,
}
`;

exports[`createService Basic handlers Detail called once, when triggered, with correct attributes 1`] = `
Object {
  "id": 5,
  "name": "john",
}
`;

exports[`createService Basic handlers Detail called once, when triggered, with correct attributes 2`] = `
Object {
  "context": Object {
    "q": "dalmatins",
    "user": "Crudella de Vile",
  },
  "id": 5,
  "options": Object {
    "q": "dalmatins",
    "user": "Crudella de Vile",
    "withRelated": Array [
      "dummy",
    ],
  },
  "safe": true,
  "type": "DETAIL",
  "write": false,
}
`;

exports[`createService Basic handlers List 1`] = `
Array [
  Object {
    "id": 2,
    "name": "john",
  },
  Object {
    "id": 2,
    "name": "john",
  },
  Object {
    "id": 2,
    "name": "john",
  },
]
`;

exports[`createService Basic handlers List 2`] = `
Object {
  "context": Object {
    "q": "dalmatins",
    "user": "Crudella de Vile",
  },
  "filters": Object {
    "nice": true,
  },
  "options": Object {
    "q": "dalmatins",
    "user": "Crudella de Vile",
    "withRelated": Array [
      "dummy",
    ],
  },
  "safe": true,
  "type": "LIST",
  "write": false,
}
`;

exports[`createService Basic handlers Update 1`] = `
Object {
  "id": 5,
  "name": "john",
}
`;

exports[`createService Basic handlers Update 2`] = `
Object {
  "bareData": Object {
    "id": 5,
  },
  "context": Object {
    "q": "dalmatins",
    "user": "Crudella de Vile",
  },
  "data": Object {
    "id": 5,
    "name": "john",
  },
  "entity": Object {
    "id": 5,
    "name": "john",
  },
  "id": 5,
  "options": Object {
    "q": "dalmatins",
    "user": "Crudella de Vile",
    "withRelated": Array [
      "dummy",
    ],
  },
  "safe": false,
  "type": "UPDATE",
  "write": true,
}
`;
